<?xml version="1.0" encoding="utf-8"?>
<!--写界面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1.5dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/text_gray">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8">
            <TextView
                android:id="@+id/writeBytes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/textViewWriteBytes"
                android:textColor="#ede2e2"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/writeValues"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:gravity="left|center"
                android:background="#d6ca9e"
                android:maxLength="255"/>
        </LinearLayout>
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/textViewSendBytes"/>
    </LinearLayout>

    <!--读界面-->
    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1.5dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/text_gray">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8">
            <TextView
                android:id="@+id/readBytes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/textViewReadBytes"
                android:textColor="#ede2e2"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/readValues"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="8"
                android:gravity="left|top"
                android:background="#d6ca9e"
                android:focusableInTouchMode="false" />
        </LinearLayout>
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/textViewClearBytes"/>

    </LinearLayout>

</LinearLayout>